--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </div>
         <div class="navbar-container">
             <ul>
-                <a href="oi.html">
+                <a href="dex1.html">
                     <li>conhecimento0</li>
                 </a>
                     <a href="#conhecimento1">
