--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="container">
         <div class="navbar-layer">
-            <h1> PETECAS
+            <h1> PTECH
             </h1>
         </div>
         <div class="navbar-container">
