--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
         <div class="navbar-container">
             <ul>
                 <a href="dex1.html">
-                    <li>conhecimento0</li>
+                    <li>Nivel 0</li>
                 </a>
-                    <a href="#conhecimento1">
-                    <li>conhecimento1</li>
+                    <a href="#dex2.html">
+                    <li>Nivel 1</li>
                 </a>
-                <a href="#conhecimento2">
-                    <li>conhecimento2</li>
+                <a href="#dex3.html">
+                    <li>Nivel 2</li>
                 </a>
-                <a href="#conhecimento3">
-                    <li>conhecimento3</li>
+                <a href="#dex4.html">
+                    <li>Nivel 3</li>
                 </a>
                 <a href="#Contate-Me">
                     <li>Contate-nos</li>
