--- a/index.html
+++ b/index.html
@@ -6,29 +6,32 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+   
         <div class="navbar-layer">
-            <h1> PTECH
+            <h1> PTECHLAB
             </h1>
-        </div>
-        <div class="navbar-container">
             <ul>
                 <a href="dex1.html">
-                    <li>Nivel 0</li>
+                    <li>Módolos</li>
                 </a>
                     <a href="#dex2.html">
-                    <li>Nivel 1</li>
-                </a>
-                <a href="#dex3.html">
-                    <li>Nivel 2</li>
-                </a>
-                <a href="#dex4.html">
-                    <li>Nivel 3</li>
+                    <li>Sobre</li>
                 </a>
                 <a href="#Contate-Me">
-                    <li>Contate-nos</li>
+                    <li>Entrar</li>
                 </a>
             </ul>
+        </div>
+        <div class="main-layer">
+            <div class="text-layer">
+            <h1> Normalização de Tabelas
+            </h1>
+            <p> A normalização de tabelas é uma técnica utilizada no design de bancos de dados 
+                para organizar dados de forma eficiente e evitar redundâncias. Ela envolve a divisão
+                 de uma tabela grande em tabelas menores relacionadas, seguindo regras chamadas de 
+                 "formas normais". Com isso, o banco de dados se torna mais fácil de gerenciar, reduzindo
+                  inconsistências e melhorando a integridade dos dados. </p></div>
+                  <div class="img-layer"><img src="celulas-da-tabela.png" id="image-layer"></div>
         </div>
        
 </body>
