--- a/index.html
+++ b/index.html
@@ -1,38 +1,40 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <title>Normalizando Tabelas</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-   
-        <div class="navbar-layer">
-            <h1> PTECHLAB
-            </h1>
-            <ul>
-                <a href="dex1.html">
-                    <li>Módolos</li>
-                </a>
-                    <a href="#dex2.html">
-                    <li>Sobre</li>
-                </a>
-                <a href="#Contate-Me">
-                    <li>Entrar</li>
-                </a>
-            </ul>
-        </div>
-        <div class="main-layer">
-            <div class="text-layer">
-            <h1> Normalização de Tabelas
-            </h1>
-            <p> A normalização de tabelas é uma técnica utilizada no design de bancos de dados 
-                para organizar dados de forma eficiente e evitar redundâncias. Ela envolve a divisão
-                 de uma tabela grande em tabelas menores relacionadas, seguindo regras chamadas de 
-                 "formas normais". Com isso, o banco de dados se torna mais fácil de gerenciar, reduzindo
-                  inconsistências e melhorando a integridade dos dados. </p></div>
-                  <div class="img-layer"><img src="celulas-da-tabela.png" id="image-layer"></div>
-        </div>
-       
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>PtechLab</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="navbar-layer">
+      <h1>PTECHLAB</h1>
+      <ul>
+        <a href="dex1.html">
+          <li>Módolos</li>
+        </a>
+        <a href="#dex2.html">
+          <li>Sobre</li>
+        </a>
+        <a href="#Contate-Me">
+          <li>Entrar</li>
+        </a>
+      </ul>
+    </div>
+    <div class="main-layer">
+      <div class="text-layer">
+        <h1>Normalização de Tabelas</h1>
+        <p>
+          A normalização de tabelas é uma técnica utilizada no design de bancos
+          de dados para organizar dados de forma eficiente e evitar
+          redundâncias. Ela envolve a divisão de uma tabela grande em tabelas
+          menores relacionadas, seguindo regras chamadas de "formas normais".
+          Com isso, o banco de dados se torna mais fácil de gerenciar, reduzindo
+          inconsistências e melhorando a integridade dos dados.
+        </p>
+      </div>
+      <div class="img-layer">
+        <img src="celulas-da-tabela.png" id="image-layer" />
+      </div>
+    </div>
+  </body>
 </html>
