--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <h1>PTECHLAB</h1>
       <ul>
         <a href="dex1.html">
-          <li>Módolos</li>
+          <li>Módulos</li>
         </a>
         <a href="#dex2.html">
           <li>Sobre</li>
