--- a/main/app/index.html
+++ b/main/app/index.html
@@ -35,7 +35,7 @@
         </p>
       </div>
       <div class="img-layer">
-        <img src="\content\celulas-da-tabela.png" id="image-layer" />
+        <img src="\main\content\celulas-da-tabela.png" id="image-layer" />
        
       </div>
     </div>
