--- a/main/app/index.html
+++ b/main/app/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="navbar-layer">
-      <h1>PTECHLAB</h1>
+      <h1>PtechLab</h1>
       <ul>
         <a href="dex1.html">
           <li>Módulos</li>
