--- a/main/app/index.html
+++ b/main/app/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>PtechLab</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
     
   </head>
   <body>
