--- a/main/app/index.html
+++ b/main/app/index.html
@@ -70,6 +70,14 @@
     </section>
     </div>
   </div>
+  <div class="module-layer">
+    <section><h1>nf1</h1></section>
+    <section><h1>nf2</h1></section>
+    <section><h1>nf3</h1></section>
+    <section><h1>nf4</h1></section>
+    <section><h1>nf5</h1></section>
+    <section><h1>nfboyce-cobb</h1></section>
+  </div>
 
   </body>
 </html>
