--- a/main/app/index.html
+++ b/main/app/index.html
@@ -71,13 +71,26 @@
     </div>
   </div>
   <div class="module-layer">
-    <section><h1>nf1</h1></section>
-    <section><h1>nf2</h1></section>
-    <section><h1>nf3</h1></section>
-    <section><h1>nf4</h1></section>
-    <section><h1>nf5</h1></section>
-    <section><h1>nfboyce-cobb</h1></section>
+    <h1 id="mod-title">Módulos</h1>
+    <div class="module">
+    <section>
+      <h1>nf1</h1>
+    </section>
+    <section>
+      <h1>nf2</h1>
+    </section>
+    <section>
+      <h1>nf3</h1>
+    </section>
+    <section>
+      <h1>nf4</h1></section>
+    <section><h1>nf5</h1>
+    </section>
+    <section>
+      <h1>nfboyce-cobb</h1>
+    </section>
   </div>
+</div>
 
   </body>
 </html>
