--- a/main/app/index.html
+++ b/main/app/index.html
@@ -11,13 +11,13 @@
     <div class="navbar-layer">
       <h1>PtechLab</h1>
       <ul>
-        <a class="link" href="dex1.html">
+        <a class="link" href="home.html">
           <li>Módulos</li>
         </a>
-        <a class="link" href="#dex2.html">
+        <a class="link" href="about.html">
           <li>Sobre</li>
         </a>
-        <a class="link" href="#Contate-Me">
+        <a class="link" href="/auth/login.html">
           <li>Entrar</li>
         </a>
       </ul>
