--- a/main/app/index.html
+++ b/main/app/index.html
@@ -76,37 +76,37 @@
      
     <section class="module-content">
       <img src="\main\content\ciencia-da-computacao.png" id="image1" />
-      <a class="link2"href="dex1.html">
+      <a class="link2"href="/main/app/modules/nf1.html">
       <p>NF1--Garante que todos os atributos das tabelas contenham valores atômicos 
         (não divisíveis) e que cada entrada da tabela seja única.</p></a>
     </section>
     <section class="module-content">
       <img src="\main\content\computador-portatil.png" id="image1" />
-      <a class="link2"href="dex1.html">
+      <a class="link2"href="/main/app/modules/nf2.html">
       <p>NF2--Exige que a tabela esteja em NF1 e, além disso, 
         que todos os atributos que não são chaves dependam totalmente da chave primária.</p></a>
     </section>
     <section class="module-content">
       <img src="\main\content\gerenciamento-de-informacoes.png" id="image1" />
-      <a class="link2"href="dex1.html">
+      <a class="link2"href="/main/app/modules/nf3.html">
      <p>NF3--Requer que a tabela esteja em NF2 e que os atributos não-chaves sejam independentes 
       uns dos outros, ou seja, sem dependências transitivas.</p></a>
     </section>
     <section class="module-content">
       <img src="\main\content\tecnologia.png" id="image1" />
-      <a class="link2"href="dex1.html">
+      <a class="link2"href="/main/app/modules/nf4.html">
         <p>NF4--Além das exigências da NF3, a NF4 elimina dependências multivaloradas, 
         onde um atributo pode ter múltiplos valores que dependem da chave primária.</p></a>
     </section>
     <section class="module-content">
       <img src="\main\content\tecnologia (1).png" id="image1" />
-      <a class="link2"href="dex1.html">
+      <a class="link2"href="/main/app/modules/nf5.html">
       <p>NF5--Também conhecida como 5NF, elimina dependências de junção, 
         assegurando que os dados sejam decompostos o máximo possível sem perda de informações.</p></a>
     </section>
     <section class="module-content">
       <img src="\main\content\transformacao.png" id="image1" />
-      <a class="link2"href="dex1.html">
+      <a class="link2"href="/main/app/modules/nfbc.html">
       <p>BCNF--Uma versão mais rigorosa da NF3, que resolve algumas exceções, 
         garantindo que toda dependência funcional seja direta da chave primária.</p></a>
     </section>
