--- a/main/app/about.html
+++ b/main/app/about.html
@@ -2,10 +2,62 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style0.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>about</title>
 </head>
 <body>
+    <div class="navbar-layer">
+        <h1>PtechLab</h1>
+        <ul>
+          <a class="link" href="index.html">
+            <li>Home</li>
+          </a>
+          <a class="link" href="about.html">
+            <li>Sobre</li>
+          </a>
+          <a class="link" href="/auth/login.html">
+            <li>Entrar</li>
+          </a>
+        </ul>
+      </div>
+
+      <div class="main-layer">
+        <div class="text-layer">
+          <h1>Nosso Projeto</h1>
+          <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati eos quo esse illum possimus iure architecto. 
+          Delectus qui vel eligendi maxime, blanditiis nam voluptatum rem unde consequuntur placeat nihil cum?
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique temporibus ducimus accusantium praesentium libero officia quibusdam fugiat mollitia, 
+          deserunt in nostrum. Doloribus porro ut iusto quod accusantium eligendi dolor cumque.
+        </p>
+        </div>
+        <div class="img-layer">
+          <img src="\main\content\grupo1.png" id="image-layer" />
+         
+        </div>
+      </div>
+      <div class="about-layer">
+        <h1 id="mod-title">Participantes</h1>
+        <div class="about">
+            <section class="odd">
+                <img src="" class="person" alt="">
+            </section>
+            <section class="even">
+                <img src="" class="person" alt="">
+            </section>
+            <section class="odd">
+                <img src="" class="person" alt="">
+            </section>
+            <section class="even">
+                <img src="" class="person" alt="">
+            </section>
+            <section class="odd">
+                <img src="" class="person" alt="">
+            </section>
+
+        </div>
+    </div>
     
 </body>
 </html>
