--- a/main/app/about.html
+++ b/main/app/about.html
@@ -41,23 +41,31 @@
         <h1 id="mod-title">Participantes</h1>
         <div class="about">
             <section class="odd">
-                <img src="" class="person" alt="">
+                <img src="\main\content\augusto.jpeg" class="person" alt="">
+                <p>Augusto Conti</p>
             </section>
             <section class="even">
-                <img src="" class="person" alt="">
+                <img src="\main\content\augusto.jpeg" class="person" alt="">
+                <p>Eduardo Sim</p>
             </section>
             <section class="odd">
-                <img src="" class="person" alt="">
+                <img src="\main\content\augusto.jpeg" class="person" alt="">
+                <p>Guilherme Wendel</p>
             </section>
             <section class="even">
-                <img src="" class="person" alt="">
+                <img src="\main\content\augusto.jpeg" class="person" alt="">
+                <p>Enzo Schiavo</p>
             </section>
             <section class="odd">
-                <img src="" class="person" alt="">
+                <img src="\main\content\augusto.jpeg" class="person" alt="">
+                <p>Giovanni Toccoli</p>
             </section>
 
         </div>
     </div>
-    
+    <div class="button-layer">
+
+ 
+    </div>
 </body>
 </html>
