--- a/main/app/index.html
+++ b/main/app/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <title>PtechLab</title>
+    <title>ptechLab aqui</title>
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
     
