--- a/main/app/index.html
+++ b/main/app/index.html
@@ -11,9 +11,6 @@
     <div class="navbar-layer">
       <h1>PtechLab</h1>
       <ul>
-        <a class="link" href="home.html">
-          <li>Módulos</li>
-        </a>
         <a class="link" href="about.html">
           <li>Sobre</li>
         </a>
@@ -45,7 +42,7 @@
     <div class ="footer-layer2">
    
     <section class="foot1">
-      <h2> Remoção de Redundâncias</h2>
+      <h2> Normalização</h2>
      <p id="foot-text"> A normalização ajuda a remover dados duplicados em uma tabela. 
       Isso significa que, se você tem informações repetidas, como endereços de clientes, 
       elas serão armazenadas em uma única tabela, reduzindo o espaço ocupado e evitando inconsistências.</p>
