--- a/main/app/modules/nf1.html
+++ b/main/app/modules/nf1.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NF1</title>
+    <meta charset="UTF-8" />
+    <title><PtechLab</title>
+    <link rel="stylesheet" href="/main/app/style.css" />
+    <script src="script.js" defer></script>
+    
 </head>
 <body>
-    
+    <div class="navbar-layer">
+        <h1>PtechLab</h1>
+        <ul>
+          <a class="link" href="/main/app/index.html">
+            <li>Módulos</li>
+          </a>
+          <a class="link" href="/main/app/about.html">
+            <li>Sobre</li>
+          </a>
+          <a class="link" href="/auth/login.html">
+            <li>Entrar</li>
+          </a>
+        </ul>
+      </div>
+      <div class="main-layer">
+        <div class="text-layer">
+          <h1>Normalização de Tabelas</h1>
+          <p>
+            A normalização de tabelas é uma técnica utilizada no design de bancos
+            de dados para organizar dados de forma eficiente e evitar
+            redundâncias. Ela envolve a divisão de uma tabela grande em tabelas
+            menores relacionadas, seguindo regras chamadas de "formas normais".
+            Com isso, o banco de dados se torna mais fácil de gerenciar, reduzindo
+            inconsistências e melhorando a integridade dos dados.
+          </p>
+        </div>
 </body>
 </html>
