--- a/main/app/index.html
+++ b/main/app/index.html
@@ -11,6 +11,9 @@
     <div class="navbar-layer">
       <h1>PtechLab</h1>
       <ul>
+        <a class="link" href="/main/app/index.html">
+          <li>Módulos</li>
+        </a>
         <a class="link" href="about.html">
           <li>Sobre</li>
         </a>
