adicionando foto do enzo

--- a/main/app/about.html
+++ b/main/app/about.html
@@ -53,7 +53,7 @@
                 <p>Guilherme Wendel</p>
             </section>
             <section class="even">
-                <img src="\main\content\augusto.jpeg" class="person" alt="">
+                <img src="\main\content\enzo.jpg" class="person" alt="">
                 <p>Enzo Schiavo</p>
             </section>
             <section class="odd">
