--- a/main/app/modules/nf1.html
+++ b/main/app/modules/nf1.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <title><PtechLab</title>
     <link rel="stylesheet" href="/main/app/style.css" />
-    <script src="script.js" defer></script>
-    
+    <link rel="stylesheet" href="style-modules.css"/>
+    <script src="/main/app/script.js" defer></script>
 </head>
 <body>
     <div class="navbar-layer">
@@ -22,17 +22,21 @@
           </a>
         </ul>
       </div>
-      <div class="main-layer">
+      <div class="main">
         <div class="text-layer">
-          <h1>Normalização de Tabelas</h1>
+          <h1>Normalização de Tabela: NF1</h1>
           <p>
-            A normalização de tabelas é uma técnica utilizada no design de bancos
-            de dados para organizar dados de forma eficiente e evitar
-            redundâncias. Ela envolve a divisão de uma tabela grande em tabelas
-            menores relacionadas, seguindo regras chamadas de "formas normais".
-            Com isso, o banco de dados se torna mais fácil de gerenciar, reduzindo
-            inconsistências e melhorando a integridade dos dados.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt doloribus nisi tempore 
+            laudantium sed aspernatur optio dolorum, soluta magnam sunt veniam ipsa hic iste at facilis perferendis nulla beatae impedit?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt doloribus nisi tempore 
+            laudantium sed aspernatur optio dolorum, soluta magnam sunt veniam ipsa hic iste at facilis perferendis nulla beatae impedit?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt doloribus nisi tempore 
+            laudantium sed aspernatur optio dolorum, soluta magnam sunt veniam ipsa hic iste at facilis perferendis nulla beatae impedit?
           </p>
+        </div>
+        <div class="video">
+        <iframe src="/main/app/modules/testedevideo.mp4" height="262px" width="465px">
+        </iframe>
         </div>
 </body>
 </html>
