eu fiz so o basico, manda o guilherme alimentar essa porra

--- a/main/app/modules/nf4.html
+++ b/main/app/modules/nf4.html
@@ -1,11 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NF4</title>
+  <meta charset="UTF-8" />
+  <title>PtechLab</title>
+  <link rel="stylesheet" href="/main/app/style.css" />
+  <link rel="stylesheet" href="style-modules.css" />
+  <script src="/main/app/script.js" defer></script>
 </head>
+
 <body>
-    
+  <div class="navbar-layer">
+    <h1>PtechLab</h1>
+    <ul>
+      <a class="link" href="/main/app/index.html">
+        <li>Módulos</li>
+      </a>
+      <a class="link" href="/main/app/about.html">
+        <li>Sobre</li>
+      </a>
+      <a class="link" href="/auth/login.html">
+        <li>Entrar</li>
+      </a>
+    </ul>
+  </div>
+  <div class="main">
+    <div class="text-layer">
+      <h1>Normalização de Tabela: NF4</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt doloribus nisi tempore
+        laudantium sed aspernatur optio dolorum, soluta magnam sunt veniam ipsa hic iste at facilis perferendis nulla
+        beatae impedit?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt doloribus nisi tempore
+        laudantium sed aspernatur optio dolorum, soluta magnam sunt veniam ipsa hic iste at facilis perferendis nulla
+        beatae impedit?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt doloribus nisi tempore
+        laudantium sed aspernatur optio dolorum, soluta magnam sunt veniam ipsa hic iste at facilis perferendis nulla
+        beatae impedit?
+      </p>
+    </div>
+    <div class="video">
+      <iframe src="/main/app/modules/testedevideo.mp4" height="262px" width="465px">
+      </iframe>
+    </div>
+  </div>
+  <div class="mod-content">
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam natus sed harum fuga voluptates vel ipsa,
+      quae deleniti, dolore nemo maxime voluptatem aliquam odit itaque expedita numquam repellendus quam eaque?
+      Laboriosam magni totam perferendis debitis hic dolore qui aperiam esse fuga ducimus, sequi magnam nemo et.
+      Asperiores in aspernatur a provident, perferendis soluta inventore at debitis, temporibus libero quisquam
+      voluptatem.
+      Temporibus neque eligendi quasi aliquid libero similique quaerat harum voluptate repellendus quod quisquam
+      unde qui, quas odit, perspiciatis necessitatibus vel voluptatem! Dolorem animi libero necessitatibus beatae sequi
+      nemo modi asperiores?
+      Pariatur eos quae magnam accusamus! Doloremque recusandae nulla corrupti. Nemo, reiciendis velit beatae qui
+      ad fugit quisquam itaque cumque aliquam assumenda fuga nihil exercitationem. Debitis amet architecto unde quasi
+      alias!
+      Non laudantium maxime fugit suscipit quas, qui ipsa quaerat adipisci itaque, aperiam optio molestiae quasi
+      reiciendis deserunt possimus iste dolor amet. Vel doloremque inventore perspiciatis expedita unde repellendus nam
+      consectetur?
+      Quasi, nulla modi hic fuga quaerat impedit tempora deserunt laborum. Repellendus amet nobis beatae aliquam a,
+      omnis, facere optio deleniti ex itaque ut temporibus culpa consectetur architecto expedita illum corporis.
+      Dolore illum possimus impedit molestias obcaecati cupiditate, reiciendis nisi eaque beatae quas aliquam animi
+      optio blanditiis assumenda voluptatum accusamus nostrum, nobis adipisci ipsa. Quia, dicta veniam. Nihil quasi quis
+      numquam.
+      Dolore corporis vitae suscipit harum odit error placeat minima id accusantium labore facilis maxime architecto
+      at nihil, voluptates, dicta eveniet. Vero similique, tenetur sint dolorem temporibus accusantium voluptas commodi
+      facilis.
+      Itaque vitae cumque, laborum obcaecati suscipit error unde ut eveniet et consectetur nemo minima explicabo neque
+      a ratione reprehenderit ab recusandae, saepe iure. Facere numquam ipsa assumenda quo maxime illo!
+      Saepe quibusdam veritatis facere cumque perspiciatis, reprehenderit placeat obcaecati blanditiis unde consectetur
+      sequi deleniti numquam illo id ipsa ad quas sunt! Debitis provident vel a itaque repellendus obcaecati vero
+      consectetur!
+      Veritatis pariatur repellat quas, dolore ex unde sed totam! Eius eos voluptate tenetur, dolorum architecto,
+      consectetur veniam impedit deleniti aspernatur ducimus molestiae voluptatum aut animi beatae praesentium. Dolore,
+      nemo. Natus?
+      Ipsam, voluptate error, maxime aliquam perspiciatis animi laudantium consequatur vero, dolorum minima fugiat quasi
+      ex quam itaque omnis quo dolores placeat maiores temporibus? Veniam eum enim illum facere praesentium. Maiores!
+      Cupiditate rem ad nobis deleniti labore corrupti alias iure quidem animi, iste consequatur praesentium ab tempore
+      illo nihil esse saepe quis vero ipsa. Omnis assumenda ad corrupti iure iste reiciendis!
+      Vitae numquam nam aspernatur laudantium dolor quos quibusdam eveniet necessitatibus quo provident, soluta quam
+      cupiditate accusantium officia vel corrupti error. Voluptates, molestiae sapiente. Vel iste eveniet voluptates
+      iusto veniam ad.
+      Nobis neque optio voluptates perferendis enim velit vel, provident quas exercitationem, temporibus veritatis
+      aperiam.
+      Eum atque vero odit hic reiciendis doloribus vel distinctio error, asperiores quis nihil corrupti, numquam
+      tempora.
+    </p>
+  </div>
 </body>
+
 </html>
