adicinando informaçoes nf4

--- a/main/app/modules/nf4.html
+++ b/main/app/modules/nf4.html
@@ -28,16 +28,18 @@
     <div class="text-layer">
       <h1>Normalização de Tabela: NF4</h1>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt doloribus nisi tempore
-        laudantium sed aspernatur optio dolorum, soluta magnam sunt veniam ipsa hic iste at facilis perferendis nulla
-        beatae impedit?
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt doloribus nisi tempore
-        laudantium sed aspernatur optio dolorum, soluta magnam sunt veniam ipsa hic iste at facilis perferendis nulla
-        beatae impedit?
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt doloribus nisi tempore
-        laudantium sed aspernatur optio dolorum, soluta magnam sunt veniam ipsa hic iste at facilis perferendis nulla
-        beatae impedit?
+        O NF4 (Forma Normal 4) é um nível avançado de normalização
+         que tem o objetivo de eliminar dependências multivaloradas 
+         em uma tabela. As dependências multivaloradas ocorrem quando 
+         um atributo de uma tabela depende de uma chave primária, 
+         mas sem relação direta com outros atributos presentes. 
+         Esse tipo de dependência é mais comum em bancos de dados complexos, 
+         onde uma entidade pode ter múltiplos valores para um único atributo 
+         sem influenciar outros valores.
       </p>
+      <!-- Neste exemplo, maf_year e color são independentes um do outro, mas dependem 
+       de car_model. Neste exemplo, 
+       essas duas colunas são consideradas multivalores dependentes de car_model.-->
     </div>
     <div class="video">
       <iframe src="/main/app/modules/testedevideo.mp4" height="262px" width="465px">
