--- a/main/app/modules/nfbc.html
+++ b/main/app/modules/nfbc.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <title>PtechLab</title>
   <link rel="stylesheet" href="/main/app/style.css" />
-  <link rel="stylesheet" href="style-modules.css" />
+  <link rel="stylesheet" href="style-modules6.css" />
   <script src="/main/app/script.js" defer></script>
 </head>
 
