--- a/main/app/index.html
+++ b/main/app/index.html
@@ -122,6 +122,17 @@
     </div>
   </div>
   <div class="button-layer">
+    <div class="button-content">
+
+      <h1>PtechLab</h1>
+      <a class="link" href="/main/app/about.html">
+        <p>Sobre nós</p></a>
+        <a class="link" href="https://www.jorgestreet.com.br/">
+          <p>Nossa escola</p></a>
+          <a class="link" href="/main/app/index.html">
+            <p>Nosso Curso</p></a>
+
+    </div>
 
 
   </div>
