novas mudancças no about

--- a/main/app/index.html
+++ b/main/app/index.html
@@ -125,11 +125,12 @@
     <div class="button-content">
 
       <h1>PtechLab</h1>
+      <p><strong>Institucional</strong></p>
       <a class="link" href="/main/app/about.html">
         <p>Sobre nós</p></a>
-        <a class="link" href="https://www.jorgestreet.com.br/">
+        <a class="link" target="_blank" href="https://www.jorgestreet.com.br/">
           <p>Nossa escola</p></a>
-          <a class="link" href="/main/app/index.html">
+          <a class="link" target="_blank" href="/main/app/index.html">
             <p>Nosso Curso</p></a>
 
     </div>
