--- a/main/app/index.html
+++ b/main/app/index.html
@@ -132,9 +132,10 @@
           <p>Nossa escola</p></a>
           <a class="link" target="_blank" href="/main/app/index.html">
             <p>Nosso Curso</p></a>
-
     </div>
-
+<div class="button-content2">
+  <p><strong>Projeto</strong></p>
+  
 
   </div>
 
