Mudanças no About

--- a/main/app/index.html
+++ b/main/app/index.html
@@ -135,6 +135,9 @@
     </div>
 <div class="button-content2">
   <p><strong>Projeto</strong></p>
+  <p>github</p> <img src="\main\content\github.png" id="image2" />  
+  <p>linkedin</p> <img src="\main\content\linkedin.png" id="image2" />
+
   
 
   </div>
