--- a/main/app/index.html
+++ b/main/app/index.html
@@ -135,8 +135,8 @@
     </div>
 <div class="button-content2">
   <p><strong>Projeto</strong></p>
-  <p>github</p> <img src="\main\content\github.png" id="image2" />  
-  <p>linkedin</p> <img src="\main\content\linkedin.png" id="image2" />
+  <p>github</p> <a href="https://github.com/ContiAugusto/database-course" target="_blank"><img src="\main\content\github.png" id="image2" /></a>
+  <p>linkedin</p> <a href="https://www.linkedin.com/in/augusto-conti-b8821432a" target="_blank"><img src="\main\content\linkedin.png" " id="image2" /></a>
 
   
 
