--- a/app/index.html
+++ b/app/index.html
@@ -98,6 +98,13 @@
         </a>
       </section>
       <section class="module-content">
+        <img src="../content/transformacao.png" id="image1" />
+        <a class="link2" href="modules/nfbc.html">
+          <p>BCNF--Uma versão mais rigorosa da NF3, que resolve algumas exceções,
+            garantindo que toda dependência funcional seja direta da chave primária.</p>
+        </a>
+      </section>
+      <section class="module-content">
         <img src="../content/tecnologia.png" id="image1" />
         <a class="link2" href="modules/nf4.html">
           <p>NF4--Além das exigências da NF3, a NF4 elimina dependências multivaloradas,
@@ -111,19 +118,28 @@
             assegurando que os dados sejam decompostos o máximo possível sem perda de informações.</p>
         </a>
       </section>
-      <section class="module-content">
-        <img src="../content/transformacao.png" id="image1" />
-        <a class="link2" href="modules/nfbc.html">
-          <p>BCNF--Uma versão mais rigorosa da NF3, que resolve algumas exceções,
-            garantindo que toda dependência funcional seja direta da chave primária.</p>
-        </a>
-      </section>
+    
     </div>
   </div>
   <div class="button-layer">
+    <div class="button-content">
 
+      <h1>PtechLab</h1>
+      <p><strong>Institucional</strong></p>
+      <a class="link" href="/main/app/about.html">
+        <p>Sobre nós</p></a>
+        <a class="link" target="_blank" href="https://www.jorgestreet.com.br/">
+          <p>Nossa escola</p></a>
+          <a class="link" target="_blank" href="/main/app/index.html">
+            <p>Nosso Curso</p></a>
+    </div>
+<div class="button-content2">
+  <p><strong>Projeto</strong></p>
+  <p>github</p> <a href="https://github.com/ContiAugusto/database-course" target="_blank"><img src="\main\content\github.png" id="image2" /></a>
+  <p>linkedin</p> <a href="https://www.linkedin.com/in/augusto-conti-b8821432a" target="_blank"><img src="\main\content\linkedin.png" " id="image2" /></a>
 
-  </div>
+  
+</div>
 
 </body>
 
