--- a/app/modules/nf4.html
+++ b/app/modules/nf4.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>PtechLab</title>
-  <link rel="stylesheet" href="/main/app/style.css" />
+  <link rel="stylesheet" href="../style.css" />
   <link rel="stylesheet" href="style-modules4.css" />
   <script src="/main/app/script.js" defer></script>
   <script src="questions-nf4.js" defer></script>
