fix links index and fix image about

--- a/app/about.html
+++ b/app/about.html
@@ -16,7 +16,7 @@
           <a class="link" href="about.html">
             <li>Sobre</li>
           </a>
-          <a class="link" href="/auth/login.html">
+          <a class="link" href="auth/login.php">
             <li>Entrar</li>
           </a>
         </ul>
@@ -33,7 +33,7 @@
         </p>
         </div>
         <div class="img-layer">
-          <img src="\main\content\grupo1.png" id="image-layer" />
+          <img src="../content/grupo1.png" id="image-layer" />
          
         </div>
       </div>
@@ -41,23 +41,23 @@
         <h1 id="mod-title">Participantes</h1>
         <div class="about">
             <section class="odd">
-                <img src="\main\content\augusto.jpeg" class="person" alt="">
+                <img src="../content/augusto.jpeg" class="person" alt="">
                 <p>Augusto Conti</p>
             </section>
             <section class="even">
-                <img src="\main\content\augusto.jpeg" class="person" alt="">
+                <img src="../content/augusto.jpeg" class="person" alt="">
                 <p>Eduardo Sim</p>
             </section>
             <section class="odd">
-                <img src="\main\content\augusto.jpeg" class="person" alt="">
+                <img src="../content/augusto.jpeg" class="person" alt="">
                 <p>Guilherme Wendel</p>
             </section>
             <section class="even">
-                <img src="\main\content\enzo.jpg" class="person" alt="">
+                <img src="../content/augusto.jpeg" class="person" alt="">
                 <p>Enzo Schiavo</p>
             </section>
             <section class="odd">
-                <img src="\main\content\augusto.jpeg" class="person" alt="">
+                <img src="../content/augusto.jpeg" class="person" alt="">
                 <p>Giovanni Toccoli</p>
             </section>
 
