--- a/app/index.html
+++ b/app/index.html
@@ -126,11 +126,11 @@
 
       <h1>PtechLab</h1>
       <p><strong>Institucional</strong></p>
-      <a class="link" href="/main/app/about.html">
+      <a class="link" href="about.html">
         <p>Sobre nós</p></a>
         <a class="link" target="_blank" href="https://www.jorgestreet.com.br/">
           <p>Nossa escola</p></a>
-          <a class="link" target="_blank" href="/main/app/index.html">
+          <a class="link" target="_blank" href="index.html">
             <p>Nosso Curso</p></a>
     </div>
 <div class="button-content2">
