Realocando as imagens para pasta mudules

--- a/app/modules/nf4.html
+++ b/app/modules/nf4.html
@@ -6,7 +6,7 @@
   <title>PtechLab</title>
   <link rel="stylesheet" href="../style.css" />
   <link rel="stylesheet" href="style-modules4.css" />
-  <script src="/main/app/script.js" defer></script>
+  <script src="../script.js" defer></script>
   <script src="questions-nf4.js" defer></script>
 </head>
 
@@ -62,7 +62,7 @@
       para resolver isso na NF4, devemos separar essas dependências
       em tabelas distintas, como Ano_Carro e Cor_Carro,
       onde cada uma é lida com as múltiplas relações.</p>
-    <img src="\main\content\modelagem-de-dados-dependencia-multivalorada.jpg">
+    <img src="modelagem-de-dados-dependencia-multivalorada.jpg">
 
     <!-- Neste exemplo, maf_year e color são independentes um do outro, mas dependem 
        de car_model. Neste exemplo, 
@@ -80,8 +80,8 @@
     </ul>
     <p>Essa forma normal é menos comum em muitos sistemas, mas é essencial em bases de dados onde a
       integridade e a precisão dos dados em múltiplas relações são cruciais.</p>
-    <img src="\main\content\divisão-nf4.png">
-    <img src="\main\content\divisão-nf4-2.png">
+    <img src="divisão-nf4.png">
+    <img src="divisão-nf4-2.png">
     <p>
       O nível de normalização NF4, ou Quarta Forma Normal (4NF),
       vai além dos conceitos de 3NF e BCNF (Forma Normal de Boyce-Codd).
@@ -144,7 +144,7 @@
       <li>Melhoria na <strong>manutenção</strong> dos dados, pois menos atualizações são necessárias para manter a
         integridade.</li>
     </ul><br><br>
-    <img src="\main\content\Formas-normais-8.png" height="350px" alt="">
+    <img src="Formas-normais-8.png" height="350px" alt="">
     <p>Embora a NF4 seja um <strong>Nível avançado</strong> de normalização,
       ela é essencial para garantir a integridade e a precisão dos dados em sistemas complexos.
       Ao eliminar dependências multivaloradas, as tabelas se tornam mais eficientes e fáceis de gerenciar,
