--- a/app/modules/nf5.html
+++ b/app/modules/nf5.html
@@ -6,7 +6,7 @@
   <title>PtechLab</title>
   <link rel="stylesheet" href="../style.css" />
   <link rel="stylesheet" href="style-modules5.css" />
-  <script src="../script.js" defer></script>
+  <script src="questions-nf5.js" defer></script>
 </head>
 
 <body>
@@ -101,9 +101,9 @@
         <div class="question">
           <label>2. Para estar na 5ª forma normal (NF5), a tabela deve estar na:</label><br>
           <input type="radio" id="q2a1" name="q2" value="A" required>
-          <label for="q2a1">A) 4ª forma normal (NF4)</label><br>
+          <label for="q2a1">A) Ter pelo menos duas chaves primárias</label><br>
           <input type="radio" id="q2a2" name="q2" value="B">
-          <label for="q2a2">B) Ter pelo menos duas chaves primárias</label><br>
+          <label for="q2a2">B) 4ª forma normal (NF4)</label><br>
           <input type="radio" id="q2a3" name="q2" value="C">
           <label for="q2a3">C) Estar na 2ª forma normal (NF2)</label>
         </div>
@@ -122,6 +122,7 @@
       </form>
       <p id="result2"></p>
     </div>
+    <script src="questions-nf5.js" defer></script>
   </div>
 </body>
 
