add giovanni image

--- a/app/about.html
+++ b/app/about.html
@@ -57,7 +57,7 @@
                 <p>Enzo Schiavo</p>
             </section>
             <section class="odd">
-                <img src="../content/augusto.jpeg" class="person" alt="">
+                <img src="../content/giovanni.jpeg" class="person" alt="">
                 <p>Giovanni Toccoli</p>
             </section>
 
